# docker-kata

./: .gitignore  README.md
000-starter-kit/: README-fr.md  README.md  docker-development-cycle.excalidraw
001-hello-world/: .gitignore  CMakeLists.txt  Makefile  README.md
002-from-scratch/: Dockerfile  Makefile  README.md
003-run-redis-service/: README.md
003-web-api/: 003-web-api.csproj  README.md
003-web-api/Properties/: launchSettings.json
004-run-sqlsrv-service/: README.md
004-web-api-docker-composer/: 004-web-api-docker-composer.http
004-web-api-docker-composer/Properties/: launchSettings.json
005-create-node-app/: README.md
005-host-node-app/: README.md  example.Dockerfile
006-create-web-api/: 003-web-api.http  003-web-api.sln  006-web-api.csproj  006-web-api.http  006-web-api.sln  Dockerfile  README.md  WeatherForecast.cs
007-create-node-app-with-docker-compose/: .gitignore  Dockerfile  README.md  app.js  example.docker-compose.yml  package-lock.json  package.json
008-create-web-api-docker-compose/: 004-web-api-docker-composer.csproj  004-web-api-docker-composer.sln  008-web-api-docker-composer.csproj  008-web-api-docker-composer.http  008-web-api-docker-composer.sln  Dockerfile  README.md  WeatherForecast.cs
008-create-web-api-with-docker-compose/: 008-create-web-api-with-docker-compose.sln  README.md  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml
008bis-dissociate-project-and-solution/: README.md
009-chroot-node-app-and-security/: README.md  example.Dockerfile
009-create-node-app-security/: README.md
(+8 files in other folders)
