# CMakeList.txt : projet CMake pour hello, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("hello")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (hello "main.c")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
